// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COMPONENT - QuoteBubble BubbleButtons > renders correctly if navigator share API is NOT available 1`] = `
.c0 {
  display: flex;
  justify-content: flex-end;
  padding-bottom: 1rem;
  padding-right: 0.8rem;
}

<div>
  <div
    class="c0"
  >
    <mock-desktop-share
      variant="facebook"
    />
    <mock-desktop-share
      variant="twitter"
    />
    <mock-copy-button
      valuetocopy="Test Quote"
    />
  </div>
</div>
`;

exports[`COMPONENT - QuoteBubble BubbleButtons > renders correctly if navigator share API is available 1`] = `
.c0 {
  display: flex;
  justify-content: flex-end;
  padding-bottom: 1rem;
  padding-right: 0.8rem;
}

<div>
  <div
    class="c0"
  >
    <mock-mobile-share />
    <mock-copy-button
      valuetocopy="Test Quote"
    />
  </div>
</div>
`;
